progress: dynamic form good for now, fix: InternalError resolved
* going with what I have for the dynamic form.
  * binding doesn't work with fill="outline" vs [fill]="itemFill" but
    is a minor thing.
    * ionic will probably fix this at some point.
  * not going to worry about magic behind submit form binding atm.
    * I do need to go ahead and rename things so we don't get magic
      bubbling if we can help it.
* InternalError: too much recursion seems to be some kind of bug that
  only happens when the modal is shown with the menu open.
  * does not occur if you manually close the menu before showing the
    modal (which is my workaround)
  * does not occur if the side panel (menu) is showing because of a
    large screen, so this is good.
  * only occurs when the menu is the show/hide kind because of the
    small size of the screen, and the menu is open.
  * still looking to possibly file a bug for this.
    * https://forum.ionicframework.com/t/ion-input-doesnt-work-after-upgrading-to-ion6/218879

--- a/ionic-gib/src/app/ibgib-forms/dynamic-form/dynamic-form.component.scss
+++ b/ionic-gib/src/app/ibgib-forms/dynamic-form/dynamic-form.component.scss
@@ -1,5 +1,9 @@
 .input-item {
-    margin: 2px;
+    margin: 2px 2px 5px 2px;
+}
+
+ion-item ion-note[slot="helper"] {
+    margin-bottom: 10px;
 }
 
 .error-summary {
